# pygrowthstandards

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  PUBLISHING.md  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  test_package.py
.github/: copilot-instructions.md
.github/workflows/: publish.yml  python-package.yml
data/: intergrowth_21st_birth_size_head_circumference_for_gestational_age.json  intergrowth_21st_birth_size_length_for_gestational_age.json  intergrowth_21st_birth_size_weight_for_gestational_age.json  intergrowth_21st_very_preterm_growth_head_circumference_for_age.json  intergrowth_21st_very_preterm_growth_length_for_age.json  intergrowth_21st_very_preterm_growth_weight_for_age.json  pygrowthstandards.csv  pygrowthstandards.json  pygrowthstandards_0.1.0.csv  pygrowthstandards_0.1.0.parquet  pygrowthstandards_0.1.1.csv  pygrowthstandards_0.1.1.parquet  pygrowthstandards_0.1.2.csv  pygrowthstandards_0.1.2.parquet  pygrowthstandards_1.1.csv  who_growth_0_to_2_body_mass_index_for_age.json  who_growth_0_to_2_head_circumference_for_age.json  who_growth_0_to_2_length_for_age.json  who_growth_0_to_2_weight_for_age.json  who_growth_10_to_19_body_mass_index_for_age.json  who_growth_10_to_19_height_for_age.json  who_growth_2_to_5_body_mass_index_for_age.json  who_growth_2_to_5_head_circumference_for_age.json  who_growth_2_to_5_height_for_age.json  who_growth_2_to_5_weight_for_age.json  who_growth_5_to_10_body_mass_index_for_age.json  who_growth_5_to_10_height_for_age.json  who_growth_5_to_10_weight_for_age.json
data/functional/: intergrowth-newborn_size-head_circumference-f-lms.json  (+67 more)
src/: __init__.py
tests/: lms_error.py  test_calculator.py  test_child.py  test_constants.py  test_decimal_stats.py  test_handler.py  test_measurement.py  test_plotter.py  test_stats.py  test_table_data.py
(+114 files in other folders)
