[project]
name = "pygrowthstandards"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas[performance, computation, plot, output-formatting, parquet]>=2.3.0",
]

[dependency-groups]
dev = ["pandas[excel]>=2.3.0", "pre-commit>=4.2.0", "pydocstyle>=6.1.1"]

pdf = ["docling>=2.42.2"]

tests = ["pytest>=8.4.0", "pytest-benchmark>=3.4.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pydocstyle]
convention = "google"
match-dir = "src"
add-ignore = [
    "D100",
    "D103",
    "D104",
    "D200",
    "D212",
] # Ignore missing module, function, package doc errors
