[project]
name = "pygrowthstandards"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas[performance, computation, plot, output-formatting, parquet]>=2.3.0",
]

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "excel" },
]

excel = ["pandas[excel]>=2.3.0"]
pdf = ["docling>=2.42.2"]

lint = ["ruff"]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
